--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "beomlog-start",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://beomseok-kang.github.io/beomlog-start",
+  "homepage": "https://beomlog.me",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^20.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.5",
     "firebase": "^7.15.5",
     "gh-pages": "^3.1.0",
+    "netlify-cli": "^2.58.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
